RESOLVED FIXED79392
[BlackBerry] Selection handler has compile failure with logs enabled.
https://bugs.webkit.org/show_bug.cgi?id=79392
Summary [BlackBerry] Selection handler has compile failure with logs enabled.
Mike Fenton
Reported 2012-02-23 13:10:33 PST
When toString was removed a compile error was introduced if Selection logs were enabled.
Attachments
Patch (3.14 KB, patch)
2012-02-23 13:15 PST, Mike Fenton
no flags
Proper patch (2.40 KB, patch)
2012-02-23 13:23 PST, Mike Fenton
no flags
Mike Fenton
Comment 1 2012-02-23 13:15:14 PST
Mike Fenton
Comment 2 2012-02-23 13:23:30 PST
Created attachment 128541 [details] Proper patch
WebKit Review Bot
Comment 3 2012-02-23 20:40:29 PST
Comment on attachment 128541 [details] Proper patch Clearing flags on attachment: 128541 Committed r108723: <http://trac.webkit.org/changeset/108723>
WebKit Review Bot
Comment 4 2012-02-23 20:40:35 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.