[BlackBerry] Selection handler has compile failure with logs enabled. https://bugs.webkit.org/show_bug.cgi?id=79392

Patch by Mike Fenton <mifenton@rim.com> on 2012-02-23
Reviewed by Antonio Gomes.

Build Fix.  Update log to avoid usage of toString which was removed.

* WebKitSupport/SelectionHandler.cpp:
(BlackBerry::WebKit::SelectionHandler::selectionPositionChanged):

Canonical link: https://commits.webkit.org/96499@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@108723 268f45cc-cd09-0410-ab3c-d52691b4dbfc